sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:16: error: not found: value lusPetit
      if(!lusPetit(i,i+1)){
          ^